<resources>
    <string name="app_name">calculater</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">X</string>
    <string name="div">/</string>
    <string name="dot">.</string>
    <string name="clear">C</string>
    <string name="bra">()</string>
    <string name="backspace">>></string>
    <string name="equal">=</string>
    <string name="per">%</string>
    <string name="display">ENTER</string>
</resources>